--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -4,8 +4,9 @@ header {
   top: 0;
   left: 0;
   z-index: var(--z-fixed);
-  background-color: var(--body-color);
+  background-color: white;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 10000;
 }
 
 nav {
