--- a/src/components/service/services.css
+++ b/src/components/service/services.css
@@ -146,9 +146,30 @@
   text-align: center;
 }
 
+.pservices__container {
+  grid-template-columns: repeat(6, 1fr);
+}
+
+.pservices__inner {
+  position: relative;
+}
+
+.pservices__inner-content {
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.76);
+  top: 1rem;
+  padding: 1rem;
+  font-size: 18px;
+  font-weight: 700;
+  color: black;
+}
+
 @media screen and (max-width: 768px) {
   .services__container {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+  .pservices__container {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
