--- a/src/components/testimonials/testimonials.css
+++ b/src/components/testimonials/testimonials.css
@@ -60,3 +60,37 @@
 .carousel__nav--next {
   right: 10px;
 }
+
+.testimonial__img {
+  max-width: 400px;
+  magring: auto;
+  text-align: center;
+}
+
+.testimonials__container {
+  width: 750px;
+  margin: auto;
+  text-align: center;
+}
+
+.testimonials__card {
+  background-color: var(--container-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 1rem;
+  border-radius: 1.5rem;
+  margin-bottom: var(--mb-3);
+  min-height: 8rem;
+}
+
+.testimonials__icon {
+  font-size: 2rem;
+  text-align: center;
+  color: var(--title-color);
+  width: 100%;
+}
+
+.testimonials__description {
+  font-size: var(--small-font-size);
+  text-align: center;
+  margin-top: 0.5rem;
+}
