--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -2,9 +2,9 @@
   margin-top: 4rem;
 }
 .about__container {
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, minmax(0, 1fr));
   align-items: center;
-  column-gap: 4rem;
+  max-width: 1024px;
 }
 
 .about__img {
@@ -17,14 +17,6 @@
   text-align: center;
   font-size: var(--small-font-size);
   margin-bottom: 2rem;
-}
-
-.about__box {
-  background-color: var(--container-color);
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 0.75rem;
-  text-align: center;
-  padding: 1rem 1.25rem;
 }
 
 .about__icon {
@@ -42,38 +34,14 @@
   font-size: var(--tiny-font-size);
 }
 
-.about__description {
-  padding: 0 4rem 0 0;
-  margin-bottom: var(--mb-2-5);
+.about__data p {
+  margin-bottom: 0.5rem;
+  text-align: left;
 }
 
 /**==== Breakpoints ====**/
 @media screen and (max-width: 992px) {
   .about__container {
-    grid-template-columns: 1fr;
-    row-gap: 2.5rem;
-  }
-
-  .about__img {
-    width: 300px;
-  }
-
-  .about__box {
-    padding: 0.75rem 0.5rem;
-  }
-
-  .about__data {
-    text-align: left;
-  }
-
-  .about__description {
-    padding: 0 5rem;
-    margin-bottom: 2rem;
-  }
-}
-
-@media screen and (max-width: 576px) {
-  .about__description {
-    padding: 0;
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 }
