--- a/src/index.css
+++ b/src/index.css
@@ -173,6 +173,8 @@ img {
   margin-left: auto;
   margin-right: auto;
   margin-top: 1rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .grid {
