--- a/src/components/service/services.css
+++ b/src/components/service/services.css
@@ -76,7 +76,7 @@
 }
 
 .services__modal-content {
-  width: 550px;
+  width: 600px;
   max-height: 700px;
   position: relative;
   background-color: var(--container-color);
@@ -91,16 +91,11 @@
 
 .services__modal-close {
   position: absolute;
-  top: 1.5rem;
-  right: 1.5rem;
-  font-size: 1.5rem;
+  top: 0.7rem;
+  right: 0.7rem;
+  font-size: 1.2rem;
   color: var(--title-color);
   cursor: pointer;
-}
-
-.services__modal-title,
-.services__modal-description {
-  text-align: center;
 }
 
 .services__modal-title {
@@ -111,8 +106,7 @@
 
 .services__modal-description {
   font-size: var(--small-font-size);
-  padding: 0 3.5rem;
-  margin-bottom: var(--mb-1);
+  text-align: left !important;
 }
 
 .services__modal-service {
@@ -144,13 +138,13 @@
   font-size: var(--small-font-size);
 }
 
-.pservices h1,
-.pservices p {
+.pservices_title {
   text-align: center;
 }
 
 .pservices__container {
   grid-template-columns: repeat(6, 1fr);
+  gap: 1.5rem;
 }
 
 .pservices__inner {
@@ -162,14 +156,18 @@
   background-color: rgba(255, 255, 255, 0.76);
   top: 1rem;
   padding: 1rem;
+  color: black;
+}
+
+.pservices__inner-content h4 {
   font-size: 18px;
   font-weight: 700;
-  color: black;
 }
 
 @media screen and (max-width: 768px) {
   .pservices__container {
     grid-template-columns: repeat(3, 1fr);
+    gap: 0.5rem;
   }
   .services__modal-items {
     grid-template-columns: repeat(1, minmax(0, 1fr));
