--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -5,6 +5,7 @@
   grid-template-columns: repeat(2, minmax(0, 1fr));
   align-items: center;
   max-width: 1024px;
+  gap: 1rem;
 }
 
 .about__img {
@@ -35,7 +36,7 @@
 }
 
 .about__data p {
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
   text-align: left;
 }
 
