--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,8 +1,12 @@
+.contact {
+  max-width: 800px;
+  margin: auto;
+  padding-bottom: 3rem;
+}
 .contact__container {
   grid-template-columns: repeat(2, max-content);
   justify-content: center;
-  column-gap: 6rem;
-  padding-bottom: 3rem;
+  gap: 2rem;
 }
 
 .contact__title {
