--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -4,9 +4,13 @@
   padding-bottom: 3rem;
 }
 .contact__container {
-  grid-template-columns: repeat(2, max-content);
+  grid-template-columns: repeat(3, 1fr);
   justify-content: center;
   gap: 2rem;
+}
+
+.contact__form-section {
+  grid-column: span 2 / span 2;
 }
 
 .contact__title {
@@ -56,6 +60,7 @@
 }
 .contact__form-tag {
   display: block;
+  font-weight: 700;
 }
 
 .contact__form-input {
@@ -88,5 +93,8 @@
   .contact__container {
     grid-template-columns: repeat(1, minmax(0, 1fr));
     column-gap: 1rem;
+  }
+  .contact__title {
+    display: none;
   }
 }
