--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -5,7 +5,7 @@ header {
   left: 0;
   z-index: var(--z-fixed);
   background-color: white;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
   z-index: 10000;
 }
 
@@ -68,7 +68,7 @@ nav {
     bottom: -100%;
     left: 0;
     width: 100%;
-    background-color: var(--body-color);
+    background-color: white;
     padding: 2rem 1.5rem 0 0;
     box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
     border-radius: 1.5rem 1.5rem 0 0;
