--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -17,6 +17,10 @@ nav {
   column-gap: 1rem;
 }
 
+.nav__logo {
+  padding: 0.5rem;
+}
+
 .nav__logo,
 .nav__toggle {
   color: var(--title-color);
@@ -33,7 +37,7 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-size: var(--small-font-size);
+  font-size: var(--normal-font-size);
   color: var(--title-color);
   font-weight: var(--font-medium);
   transition: 0.3s;
