--- a/src/components/shop/bestseller.css
+++ b/src/components/shop/bestseller.css
@@ -11,7 +11,7 @@
 
 .bestseller-carousel__item {
   flex: 0 0 auto;
-  width: 300px;
+  width: 22%;
   text-align: left;
   padding: 0.7rem 0.7rem 1rem;
   border-radius: 5px;
@@ -111,7 +111,7 @@
     gap: 0.7rem;
   }
   .bestseller-carousel__item {
-    width: 200px;
+    width: 47%;
   }
   .bestseller-carousel__title {
     font-size: 13px;
